# OSNP2024

./: CMakeLists.txt
A/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
B/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
C/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
D/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
E/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
F/: README.MD  jawaban.cpp  jawaban.h  main.cpp  main.test.cpp
